--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,5 +24,5 @@
     width: 100%;
     height : 100vh ;
     font-family : "roboto" ;
-    background-color: grey;
+    /* background-color: grey; */
   }
