--- a/client/src/CSS/WaitingList.css
+++ b/client/src/CSS/WaitingList.css
@@ -1,53 +1,72 @@
 .wait-list-container {
-    width: 90%;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: rgb(175, 212, 219);
-}
-#wait-list-appointmentsTable{
-    width: 100%;
+    width: 98%;
     border-collapse: collapse;
     border-spacing: 0;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 10px;
 }
+
+#wait-list-herotext {
+    text-align: center;
+    color: #02568f;
+}
+
+#wait-list-appointmentsTable{
+    width: 100%;
+    border-radius: 6px;
+    box-shadow: 0 0 10px rgba(0, 12, 125, 0.25);
+}
+
 #wait-list-appointmentsTable th, td {
     padding: 8px;
     text-align:left;
     border-bottom: 2px solid #ddd;
 }
+
 #wait-list-appointmentsTable th {
     background-color: #f2f2f2;
+    color: #02568f;
     position: sticky;
     top: 0;
     z-index: 1;
 }
+
 #wait-list-appointmentsTable thead th {
     position: sticky;
     top: 0;
     z-index: 1;
     background-color: #f2f2f2;
 }
+
 #wait-list-appointmentsTable tbody th,
 #wait-list-appointmentsTable tbody td {
     position: relative;
     z-index: 0;
 }
-#wait-list-appointmentsTable tr:hover {
-    background-color: #f5f5f5;
-}
 
-#wait-list-herotext {
-    text-align: center;
+#wait-list-appointmentsTable tr:hover {
+    background-color: #f4f4f4;
 }
 
 #wait-list-searchInput {
     margin-left: 10px;
 }
+
 .wait-list-controls {
+    margin: 10px;
     display: flex;
     justify-content:left;
     align-items: center;
+}
+
+.wait-list-controls button, .wait-list-filter select,
+#wait-list-searchInput {
+    margin-left: 10px;
+    color:#02568f;
+    background: none;
+    font-size: medium;
+    border-color:#3498db;
+    border-radius: 5px;
+    border-width: 1.5px;
 }
 
 .wait-list-sort, .wait-list-filter {
@@ -60,4 +79,15 @@
 
 .wait-list-sort button, .wait-list-filter select {
     margin-left: 10px;
+}
+
+#wait-list-serchbar {
+    margin: 10px;
+}
+
+.wait-list-accept-button,
+.wait-list-reject-button {
+    margin-right: 5px;
+    border-color: #3498db;
+    border-radius: 4px;
 }
