--- a/client/src/CSS/PatientDashboard.css
+++ b/client/src/CSS/PatientDashboard.css
@@ -311,20 +311,31 @@
 }
 
 .patient-homepage-doctor-photo {
-    flex: 1;
-    text-align: center;
+    margin : 15px auto ;
+    position: relative;
+    overflow: hidden;
+    border-radius: 10%;
+    height: 170px;
+    width : 170px ;
 }
 
 .patient-homepage-doctor-photo img {
-    width: 170px;
-    height: 170px;
-    border-radius: 10%;
-    margin-top: 30px;
+    
+    /* border-radius: 10%;
+    margin-top: 30px; */
+
+    /* height:170px; */
+    position: absolute;
+    top: -9999px;
+    bottom: -9999px;
+    left: -9999px;
+    right: -9999px;
+    margin: auto;
 }
 
 .patient-homepage-doctor-info {
     flex: 3;
-    padding: 12px 18px 18px 18px;
+    padding: 0px 18px 18px 18px;
     text-align: center;
 }
 
